# DX12Lib

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  CMakeSettings.json  CommandQueue.cpp  CommandQueue.h  Console.cpp  Console.h  ConsoleCommands.cpp  ConsoleCommands.h  ConstantBufferManager.cpp  ConstantBufferManager.h  CurrentIssues.txt  DXApp.cpp  DXApp.h  DXAppImplementation.cpp  DXAppImplementation.h  DXHelper.h  DescriptorHeapCollection.cpp  DescriptorHeapCollection.h  DynamicGpuHeap.cpp  DynamicGpuHeap.h  FileManager.cpp  FileManager.h  FreeCamera.cpp  FreeCamera.h  GeomUtils.h  GfxCommandQueue.cpp  GfxCommandQueue.h  GpuDataManager.cpp  GpuDataManager.h  GpuResource.cpp  GpuResource.h  HeapBuffer.cpp  HeapBuffer.h  ImguiHelper.cpp  ImguiHelper.h  Level.cpp  (+50 more)
content/entities/: anvil.json  arissa.json  box.json  boxes.json  coffee_cup.json  house.json  light_sphere.json  mikazukimunechika_sword.json  skybox.json  sphere.json  sphere_0.json  sphere_10.json  sphere_11.json  sphere_13.json  sphere_14.json  sphere_15.json  sphere_2.json  sphere_3.json  sphere_4.json  sphere_5.json  sphere_6.json  sphere_8.json  sphere_9.json  sword.json
content/levels/: pbr_test.json  pbr_test_models.json  test_level copy.json  test_level.json  test_level2.json
content/models/: Arissa.fbx  anvil.fbx  box.fbx  house.fbx  sphere.fbx
content/shaders/: compute_shader_0.hlsl  compute_shader_1.hlsl  constant_buffers.ihlsl  def_shading_ps.hlsl  pbr_light.ihlsl  pixel_shader_0.hlsl  pixel_shader_1.hlsl  pixel_shader_2.hlsl  pixel_shader_3.hlsl  pixel_shader_4.hlsl  pixel_shader_5.hlsl  pixel_shader_6.hlsl  post_processing_ps.hlsl  ps_ssao_hist.hlsl  shader_defs.ihlsl  ssao_cs.hlsl  terrain_vs.hlsl  vertex_shader.hlsl  vertex_shader_0.hlsl  vertex_shader_1.hlsl  vertex_shader_2.hlsl  vertex_shader_4.hlsl  vertex_shader_5.hlsl  vertex_shader_6.hlsl
content/textures/: Arissa_DIFF_diffuse_PNG_BC7_1.DDS  Arissa_NM_normal_PNG_BC7_1.DDS  Arissa_SPEC_specular_PNG_BC7_1.DDS  normal.dds
shaders/: constant_buffers.hlsl  def_shading_ps.hlsl  g_buffer_color_ps.hlsl  g_buffer_color_vs.hlsl  g_buffer_ps.hlsl  g_buffer_tex_ps.hlsl  g_buffer_tex_vs.hlsl  g_buffer_vs.hlsl  gaussian_blur_cs.hlsl  pbr_light.ihlsl  post_processing_ps.hlsl  quad_screen_vs.hlsl  refl_cs.hlsl  shader_defs.hlsl  shader_defs.ihlsl  shadow_vs.hlsl  skybox_ps.hlsl  skybox_vs.hlsl  ssao_cs.hlsl  terrain_ps.hlsl  terrain_vs.hlsl  vertex_data.hlsl  water_ps.hlsl  water_vs.hlsl
src/: Application.cpp  Application.h  CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Console.cpp  ConsoleCommands.cpp  ConstantBufferManager.cpp  ConstantBufferManager.h  DXApp.cpp  DXApp.h  DXAppImplementation.cpp  DXAppImplementation.h  DXHelper.h  DescriptorHeapCollection.h  DynamicGpuHeap.cpp  DynamicGpuHeap.h  Fence.cpp  Fence.h  FileManager.cpp  FileManager.h  FreeCamera.h  Frontend.cpp  Frontend.h  GfxCommandQueue.cpp  GfxCommandQueue.h  GpuDataManager.cpp  GpuDataManager.h  GpuResource.cpp  GpuResource.h  HeapBuffer.cpp  HeapBuffer.h  ImguiHelper.cpp  ImguiHelper.h  Level.cpp  Level.h  LevelEntity.cpp  LevelEntity.h  (+36 more)
src/backend_dx12/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Console.cpp  ConsoleCommands.cpp  DescriptorHeapCollection.cpp  DescriptorHeapCollection.h  DxBackend.cpp  DxBackend.h  DxDevice.cpp  DxDevice.h  DxGpuResource.cpp  DxGpuResource.h  DynamicGpuHeap.cpp  DynamicGpuHeap.h  Fence.cpp  Fence.h  GpuResource.cpp  GpuResource.h  HeapBuffer.cpp  HeapBuffer.h  ImguiHelper.cpp  ImguiHelper.h  NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h  PIXapi.h  ResourceDescriptor.cpp  ResourceDescriptor.h  RootSignature.cpp  RootSignature.h  ShaderManager.cpp  ShaderManager.h  SwapChain.cpp  SwapChain.h  Techniques.cpp  (+4 more)
src/backend_interface/: IBackend.h  ICommandList.h  ICommandQueue.h  IDescriptorHeapCollection.h  IDynamicGpuHeap.h  IFence.h  IGpuResource.h  IHeapBuffer.h  IImguiHelper.h  IResourceDescriptor.h  IRootSignature.h  ITechniques.h  ITextureLoader.h  defines.h  simple_object_pool.h
src/backend_vk/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Console.cpp  Console.h  ConsoleCommands.cpp  DescriptorHeapCollection.cpp  DescriptorHeapCollection.h  DynamicGpuHeap.cpp  DynamicGpuHeap.h  Fence.cpp  Fence.h  GpuResource.cpp  GpuResource.h  HeapBuffer.cpp  HeapBuffer.h  ImguiHelper.cpp  ImguiHelper.h  ResourceDescriptor.cpp  ResourceDescriptor.h  RootSignature.cpp  RootSignature.h  ShaderManager.cpp  ShaderManager.h  SwapChain.cpp  SwapChain.h  Techniques.cpp  Techniques.h  TextureLoader.cpp  TextureLoader.h  VkBackend.cpp  VkBackend.h  VkDevice.cpp  VkDevice.h  VkGpuResource.cpp  VkGpuResource.h  VkMemoryHelper.cpp  VkMemoryHelper.h  (+1 more)
src/common/: Logger.h
